manifests/vdpa-webhook/vdpa-mutating-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubevirt-vdpa-mutating-webhook
  namespace: kubevirt
  labels:
    app: kubevirt-vdpa-mutating-webhook
spec:
  selector:
    app: kubevirt-vdpa-mutating-webhook
  ports:
  - name: https
    port: 443
    targetPort: 8443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubevirt-vdpa-mutating-webhook
  namespace: kubevirt
  labels:
    app: kubevirt-vdpa-mutating-webhook
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kubevirt-vdpa-mutating-webhook
  template:
    metadata:
      labels:
        app: kubevirt-vdpa-mutating-webhook
    spec:
      serviceAccountName: kubevirt-vdpa-mutating-webhook
      containers:
      - name: webhook
        image: quay.io/kubevirt/kubevirt-vdpa-mutating-webhook:latest
        args:
        - --port=8443
        ports:
        - containerPort: 8443
          name: https
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /healthz
            port: 8443
          initialDelaySeconds: 3
          periodSeconds: 5

---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kubevirt-vdpa-mutating-webhook
  labels:
    app: kubevirt-vdpa-mutating-webhook
webhooks:
- name: vdpa-reservedoverhead.kubevirt.io
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Fail
  clientConfig:
    service:
      name: kubevirt-vdpa-mutating-webhook
      namespace: kubevirt
      path: /mutate-vdpa
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [kubevirt.io]
    apiVersions: [v1]
    resources: [virtualmachines]
